# Backend-VirtualPet

./: docker-compose.yml
Back/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  api.md  create_rider.py  create_test_orders.py  docker-compose.yml  dump.sql  main.py  pyproject.toml  requirements.txt  upload_to_s3.py
Back/backoffice/controllers/: backoffice_controller.py
Back/infrastructure/db/: base.py  base_class.py
Back/infrastructure/db/migrations/: env.py
Back/infrastructure/db/seeds/: seed.py  upload_manual_images.py
Back/infrastructure/storage/: r2_service.py  s3_service.py  storage_service.py
Back/modules/auth/controllers/: auth_controller.py
Back/modules/auth/models/: user.py
Back/modules/auth/repositories/: user_repository.py
Back/modules/auth/schemas/: user_schema.py
Back/modules/auth/services/: auth_service.py
Back/modules/catalog/controllers/: product_controller.py
Back/nginx/: default.conf
Back/shared/config/: settings.py
Back/shared/dependencies/: auth.py  database.py
Back/shared/exceptions/: handlers.py
Back/shared/utils/: security.py  websocket_manager.py
Back/tests/: README.md  conftest.py  test_auth_controller.py  test_auth_expired.py  test_auth_service.py  test_backend_integration.py  test_backoffice_controller.py  test_cart_controller.py  test_catalog_controller.py  test_catalog_service.py  test_chatbot.py  test_concurrency.py  test_main.py  test_order_integrity.py  test_order_service.py  test_orders_controller.py  test_payments_service.py  test_sales_controller.py  test_sales_service.py
(+34 files in other folders)
