[project]
name = "virtualpet-backend"
version = "0.1.0"
description = "Backend para el proyecto VirtualPet con FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.1",
    "bcrypt==4.1.3",
    "boto3==1.34.0",
    "cryptography==42.0.8",
    "fastapi==0.111.0",
    "google-generativeai>=0.8.6",
    "httpx==0.27.0",
    "pydantic-settings==2.2.1",
    "pymysql==1.1.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.30.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
]
